@@ -1,6 +1,9 @@
 Changelog
 =========
 
+2024-02-18
+- Add special property info for Hollow Weapons
+
 2024-01-13
 - Add call-out for undefined damage type in mob body part attacks
 - Add treestats server extractor
